[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autobloody"
authors = [
    { name="CravateRouge", email="baptiste.crepin@ntymail.com" },
]
version = "1.0.0"
description = "AD Privesc Automation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
dependencies = [
        "bloodyAD>=2.3.1",
        "neo4j>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/CravateRouge/autobloody"
"Bug Tracker" = "https://github.com/CravateRouge/autobloody/issues"

[project.scripts]
autobloody = "autobloody.main:main"